--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
         <a href="https://saio01.github.io/AsiaSourceiCollege22/index.html"> <img
                 src="https://web.archive.org/web/20220520003024im_/https://www.asiasourceicollege.edu.ph/images/asic%20logo44x52.png"
                 class="logo"></a></li>
-        <li> <a href="https://dancrj.github.io/asic-facilities/"> Home </a> </li>
-        <li> <a href="https://dancrj.github.io/About-Us-Asic/"> About us </a> </li>
-        <li> <a href="https://dancrj.github.io/asic-shs/">Programs Offered </a> </li>
-        <li> <a href=""> Updates </a> </li>
-        <li> <a href="">Admissions </a> </li>
-        <li> <a href=""> Contact Us </a> </li>
+<li> <a href="https://saio01.github.io/AsiaSourceiCollege22/"> Home </a> </li>
+         <li> <a href="https://dancrj.github.io/asic-facilities/">  Facilities </a> </li>
+                <li> <a href="https://saio01.github.io/AsiaSourceiCollege22/admissions.html"> Admissions </a> </li>
+                            <li> <a href="https://saio01.github.io/AsiaSourceiCollege22/contactus.html"> Contact Us</a> </li>
 
     </ul>
   </nav>
